[package]
name = "actions"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[dependencies]
anyhow.workspace = true
command_palette.workspace = true
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
util.workspace = true
workspace-hack.workspace = true
zed.workspace = true

[build-dependencies]
anyhow.workspace = true
command_palette.workspace = true
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
util.workspace = true
zed.workspace = true

[lints]
workspace = true