[package]
name = "activity_indicator"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lib]
path = "src/activity_indicator.rs"
doctest = false

[dependencies]
anyhow.workspace = true
auto_update = { path = "../auto_update" }
editor = { path = "../editor" }
futures.workspace = true
gpui = { path = "../gpui" }
language = { path = "../language" }
project = { path = "../project" }
settings = { path = "../settings" }
smallvec.workspace = true
theme = { path = "../theme" }
ui = { path = "../ui" }
util = { path = "../util" }
workspace = { path = "../workspace", package = "workspace" }

[dev-dependencies]
editor = { path = "../editor", features = ["test-support"] }
