[package]
name = "activity_indicator"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/activity_indicator.rs"
doctest = false

[features]
auto_update = ["dep:auto_update"]

[dependencies]
anyhow.workspace = true
auto_update = { workspace = true, optional = true }
editor.workspace = true
extension.workspace = true
futures.workspace = true
gpui.workspace = true
language.workspace = true
project.workspace = true
smallvec.workspace = true
ui.workspace = true
workspace.workspace = true

[dev-dependencies]
editor = { workspace = true, features = ["test-support"] }
