[package]
name = "activity_indicator"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/activity_indicator.rs"
doctest = false

[dependencies]
anyhow.workspace = true
auto_update.workspace = true
editor.workspace = true
extension_host.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
language.workspace = true
project.workspace = true
proto.workspace = true
semver.workspace = true
smallvec.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true

[dev-dependencies]
editor = { workspace = true, features = ["test-support"] }
release_channel.workspace = true
