[package]
name = "agent_skills"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "agent_skills.rs"

[dependencies]
anyhow.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
paths.workspace = true
serde.workspace = true
serde_yaml.workspace = true
util.workspace = true
worktree.workspace = true

[dev-dependencies]
fs = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
serde_json.workspace = true
tempfile.workspace = true