[package]
name = "agent_ui_v2"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/agent_ui_v2.rs"
doctest = false

[dependencies]
agent_settings.workspace = true
anyhow.workspace = true
db.workspace = true
fs.workspace = true
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true