[package]
name = "ai"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-only"


[lib]
path = "src/ai.rs"
doctest = false

[features]
test-support = []

[dependencies]
gpui = { path = "../gpui" }
util = { path = "../util" }
language = { path = "../language" }
async-trait.workspace = true
anyhow.workspace = true
futures.workspace = true
lazy_static.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
isahc.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
postage.workspace = true
rand.workspace = true
log.workspace = true
parse_duration = "2.1.1"
tiktoken-rs.workspace = true
matrixmultiply = "0.3.7"
rusqlite = { version = "0.29.0", features = ["blob", "array", "modern_sqlite"] }
bincode = "1.3.3"

[dev-dependencies]
gpui = { path = "../gpui", features = ["test-support"] }
