[package]
name = "ai_onboarding"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/ai_onboarding.rs"

[features]
default = []

[dependencies]
agent.workspace = true
agent_settings.workspace = true
component.workspace = true
gpui.workspace = true
inventory.workspace = true
language.workspace = true
language_model.workspace = true
project.workspace = true
proto.workspace = true
schemars.workspace = true
search.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
settings.workspace = true
telemetry.workspace = true
telemetry_events.workspace = true
theme.workspace = true
ui.workspace = true
workspace.workspace = true
zed_actions.workspace = true
